--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<meta
+    <meta
       name="fc:frame"
       content='{ 
         "version": "next",
-        "imageUrl": "https://mini-testf.netlify.app/image.png",
+        "imageUrl": "https://forge-bot.vercel.app/image.png",
         "button": {
           "title": "Launch",
           "action": {
             "type": "launch_frame",
-            "url": "https://mini-testf.netlify.app",
+            "url": "https://forge-bot.vercel.app",
             "name": "mini-testf",
-            "splashImageUrl": "https://mini-testf.netlify.app/logo.jpg",
-            "splashBackgroundColor": "#1f2937"
+            "splashImageUrl": "https://forge-bot.vercel.app/image.png",
+            "splashBackgroundColor": "#ffffff"
           }
         }
       }'
