farcaster manifest upload

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
           "action": {
             "type": "launch_frame",
             "url": "https://forge-bot.vercel.app",
-            "name": "mini-testf",
+            "name": "Forge Bot",
             "splashImageUrl": "https://forge-bot.vercel.app/image.png",
             "splashBackgroundColor": "#ffffff"
           }
